--- a/back index.css
+++ b/back index.css
@@ -1,163 +1,164 @@
+
 body{
-    font-family: sans-serif;
-    background: #34495e;
-  }
-  .box{
-    height: 520px;
-    width: 350px;
-    padding-bottom: -0px;
-      padding-right: 40px;
-      padding-left: 40px;
-      padding-top: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    background: #222222;
-    border-radius: 15px;
-    animation: fade 3s;
-  }
-    @keyframes fade {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
-    }
-    /*The main form tag is included to appear from nowhere*/
-  
-  .box span{
-    text-transform: uppercase;
-    display: block;
-  }
-  .boxhead{
-    color: #ffffff;
-    text-transform: uppercase;
-    margin: 20px 0px;
-    text-align: center;
-    background:#222222;
-    margin-bottom: 10px;
-    position: relative;
+  font-family: sans-serif;
+  background-color: #34495e;
+}
+  /*The main form tag is included to appear from nowhere*/
+
+.box span{
+  text-transform: uppercase;
+}
+
+.box{
+  padding: 20px 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background: #222222;
+  height: 400px;
+  width: 30%;
+  text-shadow: 5px 5px 2px #000;
+  box-shadow: 10px 10px 10px #000;
+  border-radius: 5px;
+  border: 2px solid #181818;
+}
+
+.boxhead{
+  color: #ffffff;
+  text-transform: uppercase;
+  display: block;
+  margin: 20px 0px;
+  text-align: center;
+  background:#222222;
+  margin-bottom: 10px;
+  position: relative;
+  font-size: 15px;
+}
+.num{
+  display: block;
+}
+.num {
+  background: transparent;
+  margin: 0px 0px;
+  text-align: center;
+  border: 3px solid #3498db;
+  padding: 20px 10px;
+  width: 170px;
+  height: 17px;
+  color: #222;
+  border-radius: 35px;
+  color: #ccc;
+  box-shadow: 3px 3px 2px #000;
+}
+/*The 'move' animation will basically make that everything appear from nowhere and increase its size 
+to the normal size*/
+
+.num:focus {
+  border: 3px solid #2ecc71;
+  transition-duration: 0.5s;
+  outline: none;
+}
+/*When an input tag is selected to put a number*/
+.button {
+  background: none;
+  display: block;
+  text-align: center;
+  border: 3px solid #2ecc71;
+  position: relative;
+  transform: translate(-0%, -488%);
+  margin-bottom: 34px;
+  margin-top: 34px;
+  margin-left: 220px;
+  padding: 14px 40px;
+  color: #333;
+  border-radius: 30px;
+  transition: 0.25s;
+  cursor: pointer;
+  font-size: 20px;
+  width: 200px;
+  outline: none;
+  color: #ccc;
+  box-shadow: 3px 3px 2px #000;
+  text-shadow: 1px 1px 2px #000;
+}
+.button:hover{
+  background: #2ecc71;
+  color: #222;
+  transition-duration: 0.5s;
+  outline: none;
+}
+/*When someone hovers the mouse on the 'calcular' button*/
+.side {
+  border:0;
+  background: none;
+  display: block;
+  position: relative;
+  transform: translate(-0%, -500%);
+  margin-bottom: 34px;
+  margin-top: 34px;
+  margin-left: 220px;
+  text-align: center;
+  border: 3px solid #2ecc71;
+  padding: 14px 0px;
+  width: 200px;
+  outline: none;
+  color: #333;
+  border-radius: 30px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #ccc;
+  box-shadow: 3px 3px 2px #000;
+  text-shadow: 1px 1px 2px #000;
+}
+.side:hover{
+  background: #2ecc71;
+  color: #222;
+  transition-duration: 0.5s;
+}
+/*Same for the 'como funciona' button*/
+.link {
+  position: relative;
+  left: 72%;
+  top: -40px;
+    font-family: arial;
     font-size: 15px;
-    animation: text 3s 1;
-  }
-  @keyframes text{
-    0%{
-      color: #222222;
-      margin-bottom: -20px;
-    }
-    50%{
-      color: #222222;
-      margin-bottom: -20px;
-    }
-  }
-  /*This animation is used for the 'calcular equacao' header*/
-  .num{
-    display: block;
-  }
-  .num {
-    background: #222222;
-    margin: 0px 0px;
-    text-align: center;
-    border: 2px solid #3498db;
-    padding: 20px 10px;
-    width: 200px;
-    height: 17px;
-    color: white;
-    border-radius: 35px;
-    animation: move 3s 1;
-  }
-  @keyframes move{
-    0%{
-      border-color: #222222;
-      margin-bottom: -30px;
-      font-size: 0px;
-    }
-    25%{
-      border-color: rgb(34, 34, 34);
-    }
-    30%{
-      font-size: 0px;
-      transition-duration: 0.1s;
-    }
-  }
-  /*The 'move' animation will basically make that everything appear from nowhere and increase its size 
-  to the normal size*/
-  
-  .num:focus {
-    margin: 5px 0px;
-    text-align: center;
-    border: 4px solid #2ecc71;
-    margin: 8px 0px;
-    padding: 14px 10px;
-    width: 235px;
-    height: 30px;
-    color: white;
-    border-radius: 35px;
-    transition-duration: 0.5s;
-  }
-  /*When an input tag is selected to put a number*/
-  .button {
-    background: none;
-    display: block;
-    text-align: center;
-    border: 2px solid #2ecc71;
-    margin-bottom: 34px;
-    margin-top: 34px;
-    padding: 14px 40px;
-    color: #999999;
-    border-radius: 30px;
-    transition: 0.25s;
-    cursor: pointer;
-    font-size: 20px;
-    width: 235px;
-    animation: move 3s 1;
-  }
-  .button:hover{
-    background: #2ecc71;
-    color: #222222;
-    transition-duration: 0.5s;
-  }
-  /*When someone hovers the mouse on the 'calcular' button*/
-  .side {
-    border:0;
-    background: none;
-    display: block;
-    margin: -10px 0px;
-    text-align: center;
-    border: 2px solid #2ecc71;
-    padding: 14px 40px;
-    width: 235px;
-    outline: none;
-    color: #999999;
-    border-radius: 30px;
-    cursor: pointer;
-    font-size: 20px;
-    animation: move 3s 1;
-  }
-  .side:hover{
-    background: #2ecc71;
-    color: #222222;
-    transition-duration: 0.5s;
-  }
-  /*Same for the 'como funciona' button*/
-  .link {
-    position: relative;
-    left: 72%;
-    top: -80px;
-      font-family: arial;
-      font-size: 15px;
-      color: #3498db;
-    animation: move 3s 1;
-  }
-  .credit {
-    position: relative;
-    top: -70px;
-    left: 72%;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px; 
-    color: #444444;
-    animation-name: initial;
-    animation: move 3s 1;
-  }
+    color: #3498db;
+}
+.credit {
+  position: relative;
+  top: -35px;
+  left: 72%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 10px; 
+  color: #999;
+  animation-name: initial;
+}
+.result {
+  background: transparent;
+  text-align: center;
+  border: 5px solid #2ecc71;
+  padding: 37px 0px 67px 0px;
+  position: relative;
+  transform: translate(-0%, -255%);
+  margin-bottom: 34px;
+  margin-top: 34px;
+  margin-left: 220px;
+  width: 180px;
+  height: 14px;
+  color: #fff;
+  border-radius: 3px;
+  user-select: all;
+  font-size: 12px;
+  box-shadow: 6px 6px 3px #000;
+  text-shadow: 3px 3px 2px #000;
+}
+
+.resultSpan{
+  display: block;
+  position: relative;
+  transform: translate(-0%, -1650%);
+  margin-left: 220px;
+  color: #ccc;
+  text-shadow: 3px 3px 2px #000;
+}
